<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_random_description">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_wolox_phone">0800 123 4567</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="view_pager_title">Username: %1$s\nFavourite color: %2$s</string>
    <string name="random_toolbar_title">Random number example</string>
    <string name="request_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_favourite_color">Your favourite color</string>
    <string name="fragment_example_login">Login</string>
	<string name="fragment_request_search">Search</string>
    <string name="fragment_request_post_id">Post id</string>
    <string name="fragment_request_invalid_input">Invalid input, please enter a valid id.</string>

    <!-- Login -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_text_login">Log in</string>
    <string name="login_text_signup">Sign up</string>
    <string name="login_conditions">By joining you agree with the terms and conditions.</string>

    <!-- Errors -->
    <string name="error_empty_email">The email cannot be empty.</string>
    <string name="error_invalid_email">The email does not have the correct format.</string>
    <string name="error_empty_password">The password cannot be empty.</string>
    <string name="error_bad_login">Incorrect email and/or password.</string>
    <string name="error_connection">Communication error. Check your internet connection and try again.</string>

    <!-- Home -->
    <string name="home_news">News</string>
    <string name="home_profile">Profile</string>
    <string name="home_wolox">Wolox</string>
    <string name="home_news_title">Ali Connors</string>
    <string name="home_news_content">I\'ll be in your neighbourhood running errands …</string>
    <string name="home_news_date">15m</string>

</resources>