<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/vHomeLogo"
        android:layout_width="@dimen/home_logo_width"
        android:layout_height="@dimen/home_logo_height"
        android:layout_marginTop="@dimen/home_logo_margin_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wolox_logo_large" />

    <TextView
        android:id="@+id/vHomeWolox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_wolox_margin_top"
        android:layout_marginStart="@dimen/home_wolox_margin_left"
        android:text="@string/home_wolox"
        app:layout_constraintStart_toEndOf="@+id/vHomeLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/vTabLayout"
        android:layout_width="@dimen/home_tab_layout_width"
        android:layout_height="@dimen/home_tab_layout_height"
        android:layout_marginTop="@dimen/home_tab_layout_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextColor="@android:color/darker_gray">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/vTabNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icon_news"
            android:text="@string/home_news" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/vTabProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/icon_profile"
            android:text="@string/home_profile" />

    </com.google.android.material.tabs.TabLayout>

    <View
        android:id="@+id/vDivider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="#C8C8C8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vTabLayout" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/vDivider" />

    <!--<include
        android:id="@+id/vNewsTab"
        layout="@layout/fragment_news"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/vDivider" />-->

</androidx.constraintlayout.widget.ConstraintLayout>