<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/vLoginCover"
        android:layout_width="@dimen/login_cover_width"
        android:layout_height="@dimen/login_cover_height"
        android:adjustViewBounds="true"
        android:background="@drawable/login_cover"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/gradient_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/vLoginLogo"
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="@dimen/login_logo_height"
        android:layout_marginStart="@dimen/static_spacing_medium_extra"
        android:layout_marginTop="@dimen/login_logo_margin_top"
        android:layout_marginEnd="@dimen/static_spacing_medium_extra"
        android:layout_marginBottom="@dimen/static_spacing_medium_extra"
        app:layout_constraintBottom_toTopOf="@+id/vLoginEmailField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wolox_logo_large" />

    <EditText
        android:id="@+id/vLoginEmailField"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="@dimen/login_field_height"
        android:layout_marginStart="@dimen/static_spacing_medium_extra"
        android:layout_marginTop="@dimen/login_email_margin_top"
        android:layout_marginEnd="@dimen/static_spacing_medium_extra"
        android:fontFamily="@font/roboto"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/vLoginPasswordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/vLoginPasswordField"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="@dimen/login_field_height"
        android:layout_marginStart="@dimen/static_spacing_medium_extra"
        android:layout_marginTop="@dimen/login_field_margin_top"
        android:layout_marginEnd="@dimen/static_spacing_medium_extra"
        android:fontFamily="@font/roboto"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/vLoginLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLoginEmailField"
        tools:text="@string/login_password" />

    <Button
        android:id="@+id/vLoginLoginButton"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="@dimen/login_field_height"
        android:layout_marginStart="@dimen/static_spacing_medium_extra"
        android:layout_marginTop="@dimen/login_button_login_margin_top"
        android:layout_marginEnd="@dimen/static_spacing_medium_extra"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/login_text_login"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/vLoginSignupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLoginPasswordField" />

    <Button
        android:id="@+id/vLoginSignupButton"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/static_spacing_medium_extra"
        android:layout_marginEnd="@dimen/static_spacing_medium_extra"
        android:layout_marginBottom="@dimen/login_button_signup_margin_bottom"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/login_text_signup"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/vLoginTermsAndConditionsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLoginLoginButton" />

    <TextView
        android:id="@+id/vLoginTermsAndConditionsText"
        android:layout_width="@dimen/spacing_none"
        android:layout_height="@dimen/static_spacing_large"
        android:layout_marginStart="@dimen/static_spacing_medium_extra"
        android:layout_marginTop="@dimen/spacing_large_big"
        android:layout_marginEnd="@dimen/static_spacing_medium_extra"
        android:fontFamily="@font/roboto"
        android:text="@string/login_conditions"
        android:textAlignment="center"
        android:textSize="@dimen/font_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLoginSignupButton" />

    <ProgressBar
        android:id="@+id/vLoginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_progress_bar_margin_top"
        android:layout_marginBottom="@dimen/login_progress_bar_margin_bottom"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/vLoginTermsAndConditionsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vLoginSignupButton" />

</androidx.constraintlayout.widget.ConstraintLayout>